--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/VSMDURGAPRASAD/mean-course#readme",
   "dependencies": {
+    "@angular/cli": "^8.3.12",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
